Migrated ControllerServlet from assignment3 (with only base functionallity) and call it when launching application

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>events-web-assignment4</name>
 	<comment></comment>
 	<projects>
+		<project>events-business-assignment4</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
